--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "@types/node": "^10.17.28",
-        "aws-sdk": "^2.857.0"
+        "aws-sdk": "^2.857.0",
+        "class-transformer": "^0.4.0",
+        "class-validator": "^0.13.1",
+        "pg": "^8.5.1",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.2.31"
     },
     "devDependencies": {
+        "@types/node": "^10.17.55",
         "jest": "^26.6.3",
         "ts-node": "^8.10.2",
         "typescript": "^3.9.7"
